// Vitest Snapshot v1

exports[`Complex Block/HTML/Markdown Conversions > Convert complex HTML to blocks 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "id": null,
            "props": {
              "level": "3",
            },
            "styledTextContent": [
              {
                "styles": [],
                "text": "Heading 3",
              },
            ],
            "textContent": "Heading 3",
            "type": "heading",
          },
        ],
        "id": null,
        "props": {
          "level": "2",
        },
        "styledTextContent": [
          {
            "styles": [],
            "text": "Heading 2",
          },
        ],
        "textContent": "Heading 2",
        "type": "heading",
      },
    ],
    "id": null,
    "props": {
      "level": "1",
    },
    "styledTextContent": [
      {
        "styles": [],
        "text": "Heading 1",
      },
    ],
    "textContent": "Heading 1",
    "type": "heading",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [
          {
            "props": {
              "color": "purple",
            },
            "type": "textColor",
          },
          {
            "props": {
              "color": "green",
            },
            "type": "backgroundColor",
          },
        ],
        "text": "Paragraph",
      },
    ],
    "textContent": "Paragraph",
    "type": "paragraph",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "P",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "bold",
          },
        ],
        "text": "ara",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "italic",
          },
        ],
        "text": "grap",
      },
      {
        "styles": [],
        "text": "h",
      },
    ],
    "textContent": "Paragraph",
    "type": "paragraph",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "P",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "underline",
          },
        ],
        "text": "ara",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "strike",
          },
        ],
        "text": "grap",
      },
      {
        "styles": [],
        "text": "h",
      },
    ],
    "textContent": "Paragraph",
    "type": "paragraph",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Bullet List Item",
      },
    ],
    "textContent": "Bullet List Item",
    "type": "bulletListItem",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Bullet List Item",
              },
            ],
            "textContent": "Bullet List Item",
            "type": "bulletListItem",
          },
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Paragraph",
              },
            ],
            "textContent": "Paragraph",
            "type": "paragraph",
          },
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Numbered List Item",
              },
            ],
            "textContent": "Numbered List Item",
            "type": "numberedListItem",
          },
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Numbered List Item",
              },
            ],
            "textContent": "Numbered List Item",
            "type": "numberedListItem",
          },
          {
            "children": [
              {
                "children": [],
                "id": null,
                "props": {},
                "styledTextContent": [
                  {
                    "styles": [],
                    "text": "Numbered List Item",
                  },
                ],
                "textContent": "Numbered List Item",
                "type": "numberedListItem",
              },
            ],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Numbered List Item",
              },
            ],
            "textContent": "Numbered List Item",
            "type": "numberedListItem",
          },
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Bullet List Item",
              },
            ],
            "textContent": "Bullet List Item",
            "type": "bulletListItem",
          },
        ],
        "id": null,
        "props": {},
        "styledTextContent": [
          {
            "styles": [],
            "text": "Bullet List Item",
          },
        ],
        "textContent": "Bullet List Item",
        "type": "bulletListItem",
      },
    ],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Bullet List Item",
      },
    ],
    "textContent": "Bullet List Item",
    "type": "bulletListItem",
  },
]
`;

exports[`Complex Block/HTML/Markdown Conversions > Convert complex Markdown to blocks 1`] = `
[
  {
    "children": [],
    "id": null,
    "props": {
      "level": "1",
    },
    "styledTextContent": [
      {
        "styles": [],
        "text": "Heading 1",
      },
    ],
    "textContent": "Heading 1",
    "type": "heading",
  },
  {
    "children": [],
    "id": null,
    "props": {
      "level": "2",
    },
    "styledTextContent": [
      {
        "styles": [],
        "text": "Heading 2",
      },
    ],
    "textContent": "Heading 2",
    "type": "heading",
  },
  {
    "children": [],
    "id": null,
    "props": {
      "level": "3",
    },
    "styledTextContent": [
      {
        "styles": [],
        "text": "Heading 3",
      },
    ],
    "textContent": "Heading 3",
    "type": "heading",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Paragraph",
      },
    ],
    "textContent": "Paragraph",
    "type": "paragraph",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "P",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "bold",
          },
        ],
        "text": "ara",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "italic",
          },
        ],
        "text": "grap",
      },
      {
        "styles": [],
        "text": "h",
      },
    ],
    "textContent": "Paragraph",
    "type": "paragraph",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "P",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "italic",
          },
        ],
        "text": "ara",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "strike",
          },
        ],
        "text": "grap",
      },
      {
        "styles": [],
        "text": "h",
      },
    ],
    "textContent": "Paragraph",
    "type": "paragraph",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Bullet List Item",
      },
    ],
    "textContent": "Bullet List Item",
    "type": "bulletListItem",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Bullet List Item",
              },
            ],
            "textContent": "Bullet List Item",
            "type": "bulletListItem",
          },
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Paragraph",
              },
            ],
            "textContent": "Paragraph",
            "type": "paragraph",
          },
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Numbered List Item",
              },
            ],
            "textContent": "Numbered List Item",
            "type": "numberedListItem",
          },
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Numbered List Item",
              },
            ],
            "textContent": "Numbered List Item",
            "type": "numberedListItem",
          },
          {
            "children": [
              {
                "children": [],
                "id": null,
                "props": {},
                "styledTextContent": [
                  {
                    "styles": [],
                    "text": "Numbered List Item",
                  },
                ],
                "textContent": "Numbered List Item",
                "type": "numberedListItem",
              },
            ],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Numbered List Item",
              },
            ],
            "textContent": "Numbered List Item",
            "type": "numberedListItem",
          },
          {
            "children": [],
            "id": null,
            "props": {},
            "styledTextContent": [
              {
                "styles": [],
                "text": "Bullet List Item",
              },
            ],
            "textContent": "Bullet List Item",
            "type": "bulletListItem",
          },
        ],
        "id": null,
        "props": {},
        "styledTextContent": [
          {
            "styles": [],
            "text": "Bullet List Item",
          },
        ],
        "textContent": "Bullet List Item",
        "type": "bulletListItem",
      },
    ],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Bullet List Item",
      },
    ],
    "textContent": "Bullet List Item",
    "type": "bulletListItem",
  },
]
`;

exports[`Complex Block/HTML/Markdown Conversions > Convert complex blocks to HTML 1`] = `"<h1>Heading 1</h1><h2>Heading 2</h2><h3>Heading 3</h3><p><span data-text-color=\\"purple\\"><span data-background-color=\\"green\\">Paragraph</span></span></p><p>P<strong>ara</strong><em>grap</em>h</p><p>P<u>ara</u><s>grap</s>h</p><ul><li><p>Bullet List Item</p></li><li><p>Bullet List Item</p><ul><li><p>Bullet List Item</p><ul><li><p>Bullet List Item</p></li></ul><p>Paragraph</p><ol><li><p>Numbered List Item</p></li><li><p>Numbered List Item</p></li><li><p>Numbered List Item</p><ol><li><p>Numbered List Item</p></li></ol></li></ol><ul><li><p>Bullet List Item</p></li></ul></li><li><p>Bullet List Item</p></li></ul></li><li><p>Bullet List Item</p></li></ul>"`;

exports[`Complex Block/HTML/Markdown Conversions > Convert complex blocks to Markdown 1`] = `
"# Heading 1

## Heading 2

### Heading 3

Paragraph

P**ara***grap*h

Para~~grap~~h

*   Bullet List Item

*   Bullet List Item

    *   Bullet List Item

        *   Bullet List Item

        Paragraph

        1.  Numbered List Item

        2.  Numbered List Item

        3.  Numbered List Item

            1.  Numbered List Item

        *   Bullet List Item

    *   Bullet List Item

*   Bullet List Item
"
`;

exports[`Nested Block/HTML/Markdown Conversions > Convert nested HTML to blocks 1`] = `
[
  {
    "children": [],
    "id": null,
    "props": {
      "level": "1",
    },
    "styledTextContent": [
      {
        "styles": [],
        "text": "Heading",
      },
    ],
    "textContent": "Heading",
    "type": "heading",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Paragraph",
      },
    ],
    "textContent": "Paragraph",
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [],
        "id": null,
        "props": {},
        "styledTextContent": [
          {
            "styles": [],
            "text": "Numbered List Item",
          },
        ],
        "textContent": "Numbered List Item",
        "type": "numberedListItem",
      },
    ],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Bullet List Item",
      },
    ],
    "textContent": "Bullet List Item",
    "type": "bulletListItem",
  },
]
`;

exports[`Nested Block/HTML/Markdown Conversions > Convert nested Markdown to blocks 1`] = `
[
  {
    "children": [],
    "id": null,
    "props": {
      "level": "1",
    },
    "styledTextContent": [
      {
        "styles": [],
        "text": "Heading",
      },
    ],
    "textContent": "Heading",
    "type": "heading",
  },
  {
    "children": [],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Paragraph",
      },
    ],
    "textContent": "Paragraph",
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [],
        "id": null,
        "props": {},
        "styledTextContent": [
          {
            "styles": [],
            "text": "Numbered List Item",
          },
        ],
        "textContent": "Numbered List Item",
        "type": "numberedListItem",
      },
    ],
    "id": null,
    "props": {},
    "styledTextContent": [
      {
        "styles": [],
        "text": "Bullet List Item",
      },
    ],
    "textContent": "Bullet List Item",
    "type": "bulletListItem",
  },
]
`;

exports[`Nested Block/HTML/Markdown Conversions > Convert nested blocks to HTML 1`] = `"<h1>Heading</h1><p>Paragraph</p><ul><li><p>Bullet List Item</p><ol><li><p>Numbered List Item</p></li></ol></li></ul>"`;

exports[`Nested Block/HTML/Markdown Conversions > Convert nested blocks to Markdown 1`] = `
"# Heading

Paragraph

*   Bullet List Item

    1.  Numbered List Item
"
`;

exports[`Non-Nested Block/HTML/Markdown Conversions > Convert non-nested HTML to blocks 1`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": [],
        "text": "Heading",
      },
    ],
    "id": 27,
    "props": {
      "backgroundColor": "default",
      "level": "1",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "heading",
  },
  {
    "children": [],
    "content": [
      {
        "styles": [],
        "text": "Paragraph",
      },
    ],
    "id": 28,
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": [],
        "text": "Bullet List Item",
      },
    ],
    "id": 29,
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "bulletListItem",
  },
  {
    "children": [],
    "content": [
      {
        "styles": [],
        "text": "Numbered List Item",
      },
    ],
    "id": 30,
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "numberedListItem",
  },
]
`;

exports[`Non-Nested Block/HTML/Markdown Conversions > Convert non-nested Markdown to blocks 1`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": [],
        "text": "Heading",
      },
    ],
    "id": 27,
    "props": {
      "backgroundColor": "default",
      "level": "1",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "heading",
  },
  {
    "children": [],
    "content": [
      {
        "styles": [],
        "text": "Paragraph",
      },
    ],
    "id": 28,
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": [],
        "text": "Bullet List Item",
      },
    ],
    "id": 29,
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "bulletListItem",
  },
  {
    "children": [],
    "content": [
      {
        "styles": [],
        "text": "Numbered List Item",
      },
    ],
    "id": 30,
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "numberedListItem",
  },
]
`;

exports[`Non-Nested Block/HTML/Markdown Conversions > Convert non-nested blocks to HTML 1`] = `"<h1>Heading</h1><p>Paragraph</p><ul><li><p>Bullet List Item</p></li></ul><ol><li><p>Numbered List Item</p></li></ol>"`;

exports[`Non-Nested Block/HTML/Markdown Conversions > Convert non-nested blocks to Markdown 1`] = `
"# Heading

Paragraph

*   Bullet List Item

1.  Numbered List Item
"
`;

exports[`Styled Block/HTML/Markdown Conversions > Convert styled HTML to blocks 1`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": [
          {
            "props": {},
            "type": "bold",
          },
        ],
        "text": "Bold",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "italic",
          },
        ],
        "text": "Italic",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "underline",
          },
        ],
        "text": "Underline",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "strike",
          },
        ],
        "text": "Strikethrough",
      },
      {
        "styles": [
          {
            "props": {
              "color": "red",
            },
            "type": "textColor",
          },
        ],
        "text": "TextColor",
      },
      {
        "styles": [
          {
            "props": {
              "color": "red",
            },
            "type": "backgroundColor",
          },
        ],
        "text": "BackgroundColor",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "bold",
          },
          {
            "props": {},
            "type": "italic",
          },
        ],
        "text": "Multiple",
      },
    ],
    "id": 27,
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
]
`;

exports[`Styled Block/HTML/Markdown Conversions > Convert styled Markdown to blocks 1`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": [
          {
            "props": {},
            "type": "bold",
          },
        ],
        "text": "Bold",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "italic",
          },
        ],
        "text": "Italic",
      },
      {
        "styles": [],
        "text": "Underline",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "strike",
          },
        ],
        "text": "Strikethrough",
      },
      {
        "styles": [],
        "text": "TextColorBackgroundColor",
      },
      {
        "styles": [
          {
            "props": {},
            "type": "bold",
          },
          {
            "props": {},
            "type": "italic",
          },
        ],
        "text": "Multiple",
      },
    ],
    "id": 27,
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
]
`;

exports[`Styled Block/HTML/Markdown Conversions > Convert styled blocks to HTML 1`] = `"<p><strong>Bold</strong><em>Italic</em><u>Underline</u><s>Strikethrough</s><span data-text-color=\\"red\\">TextColor</span><span data-background-color=\\"red\\">BackgroundColor</span><strong><em>Multiple</em></strong></p>"`;

exports[`Styled Block/HTML/Markdown Conversions > Convert styled blocks to Markdown 1`] = `
"**Bold***Italic*Underline~~Strikethrough~~TextColorBackgroundColor***Multiple***
"
`;
